googlebookapi.yaml
apiVersion: v1
kind: Pod
metadata:
  name: zbio-sample-googlebookapi
  labels:
    app: zbio-sample-googlebookapi
    owner: zbio
    managed-by: roost
spec:
  containers:
  - name: bookapi
    image: roost-utility:5002/google_book_api:latest
    ports:
      - containerPort: 9999
    resources:
      requests: {}
      limits:
        memory: "256Mi"
        cpu: "200m"
  restartPolicy: OnFailure
  terminationGracePeriodSeconds: 0

---
kind: Service 
apiVersion: v1
metadata:
  name: googlebookapi
  labels:
    app: zbio-sample-googlebookapi
    owner: zbio
    managed-by: roost
spec:
  type: NodePort
  selector:
    app: zbio-sample-googlebookapi
  ports:
  - name: tcp
    port: 9999
    targetPort: 9999
    nodePort: 30045
