ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui
  namespace: default
spec:
  ingressClassName: nginx 
  rules:
  - host: http://localhost:8084/
    http:
      paths:
      - path: /ui
        pathType: Prefix
        backend:
          service:
            name: ui
            port:
              number: 8084
